@@ -1,35 +1,8 @@
 package de.sub.goobi.metadaten;
 
-/**
- * This file is part of the Goobi Application - a Workflow tool for the support of mass digitization.
- * 
- * Visit the websites for more information.
- *             - https://goobi.io
- *             - https://www.intranda.com
- * 
- * This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free
- * Software Foundation; either version 2 of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59
- * Temple Place, Suite 330, Boston, MA 02111-1307 USA
- * 
- * Linking this library statically or dynamically with other modules is making a combined work based on this library. Thus, the terms and conditions
- * of the GNU General Public License cover the whole combination. As a special exception, the copyright holders of this library give you permission to
- * link this library with independent modules to produce an executable, regardless of the license terms of these independent modules, and to copy and
- * distribute the resulting executable under terms of your choice, provided that you also meet, for each linked independent module, the terms and
- * conditions of the license of that module. An independent module is a module which is not derived from or based on this library. If you modify this
- * library, you may extend this exception to your version of the library, but you are not obliged to do so. If you do not wish to do so, delete this
- * exception statement from your version.
- */
-
-import java.awt.Dimension;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URISyntaxException;
 import java.nio.file.FileSystems;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -75,7 +48,6 @@ import de.sub.goobi.helper.Helper;
 import de.sub.goobi.helper.HelperComparator;
 import de.sub.goobi.helper.HttpClientHelper;
 import de.sub.goobi.helper.NIOFileUtils;
-import de.sub.goobi.helper.S3FileUtils;
 import de.sub.goobi.helper.StorageProvider;
 import de.sub.goobi.helper.Transliteration;
 import de.sub.goobi.helper.TreeNode;
@@ -86,12 +58,11 @@ import de.sub.goobi.helper.exceptions.DAOException;
 import de.sub.goobi.helper.exceptions.InvalidImagesException;
 import de.sub.goobi.helper.exceptions.SwapException;
 import de.sub.goobi.persistence.managers.ProcessManager;
-import de.unigoettingen.sub.commons.contentlib.exceptions.ContentLibImageException;
-import de.unigoettingen.sub.commons.contentlib.servlet.controller.GetImageDimensionAction;
 import de.unigoettingen.sub.search.opac.ConfigOpac;
 import de.unigoettingen.sub.search.opac.ConfigOpacCatalogue;
 import lombok.Getter;
 import lombok.Setter;
+import ugh.dl.Corporate;
 import ugh.dl.DigitalDocument;
 import ugh.dl.DocStruct;
 import ugh.dl.DocStructType;
@@ -151,11 +122,16 @@ public class Metadaten {
     private List<MetaPerson> myPersonen = new LinkedList<>();
     @Getter
     @Setter
+    private List<MetaCorporate> corporates = new LinkedList<>();
+    @Getter
+    @Setter
     private List<MetadataGroupImpl> groups = new LinkedList<>();
     @Getter
     @Setter
     private MetadataGroupImpl currentGroup;
     private MetadataGroupImpl selectedGroup;
+    @Getter
+    @Setter
     private List<MetadataGroupImpl> tempMetadataGroups = new ArrayList<>();
     private String tempGroupType;
     @Getter
@@ -164,6 +140,9 @@ public class Metadaten {
     @Getter
     @Setter
     private Metadata currentMetadata;
+    @Getter
+    @Setter
+    private Corporate currentCorporate;
     @Getter
     @Setter
     private MetaPerson curPerson;
@@ -194,6 +173,16 @@ public class Metadaten {
     @Setter
     private String tempPersonRolle;
     @Getter
+    @Setter
+    private String tempCorporateMainName;
+    @Getter
+    @Setter
+    private String tempCorporateSubName;
+    @Getter
+    @Setter
+    private String tempCorporatePartName;
+
+    @Getter
     private String currentTifFolder;
     private List<String> allTifFolders;
     /* Variablen für die Zuweisung der Seiten zu Strukturelementen */
@@ -219,6 +208,9 @@ public class Metadaten {
     @Getter
     @Setter
     private MetadatumImpl selectedMetadatum;
+    @Getter
+    @Setter
+    private MetaCorporate selectedCorporate;
     @Getter
     @Setter
     private PhysicalObject currentPage;
@@ -276,6 +268,9 @@ public class Metadaten {
     @Getter
     @Setter
     private boolean modeAddGroup = false;
+    @Getter
+    @Setter
+    private boolean modeAddCorporate = false;
     @Getter
     @Setter
     private String modusAnsicht = "Metadaten";
@@ -361,6 +356,10 @@ public class Metadaten {
     private List<String> dataList = new ArrayList<>();
     @Getter
     private List<MetadatumImpl> addableMetadata = new LinkedList<>();
+
+    @Getter
+    private List<MetaCorporate> addableCorporates = new LinkedList<>();
+
     @Getter
     private List<MetaPerson> addablePersondata = new LinkedList<>();
     @Getter
@@ -379,7 +378,6 @@ public class Metadaten {
     private List<Image> allImages;
     @Getter
     private Image image = null;
-    private List<String> imageSizes;
     @Getter
     private int containerWidth = 600;;
     private boolean processHasNewTemporaryMetadataFiles = false;
@@ -411,10 +409,17 @@ public class Metadaten {
     private boolean pagesRTL = false;
 
     private List<SelectItem> addableMetadataTypes = new ArrayList<>();
+    private List<SelectItem> addableCorporateTypes = new ArrayList<>();
 
     private List<ConfigOpacCatalogue> catalogues = null;
     private List<String> catalogueTitles;
     private ConfigOpacCatalogue currentCatalogue;
+
+    enum MetadataTypes {
+        PERSON,
+        CORPORATE,
+        METATDATA
+    }
 
     /**
      * Konstruktor ================================================================
@@ -489,10 +494,23 @@ public class Metadaten {
         return "";
     }
 
+    public String AddCorporate() {
+        modeAddCorporate = true;
+        currentMetadataToPerformSearch = null;
+        tempCorporateMainName = null;
+        tempCorporateSubName = null;
+        tempCorporatePartName = null;
+        if (!SperrungAktualisieren()) {
+            return "metseditor_timeout";
+        }
+        return "";
+    }
+
     public String Abbrechen() {
         this.modusHinzufuegen = false;
         this.modusHinzufuegenPerson = false;
         this.modeAddGroup = false;
+        modeAddCorporate = false;
         getMetadatum().setValue("");
         if (!SperrungAktualisieren()) {
             return "metseditor_timeout";
@@ -551,7 +569,7 @@ public class Metadaten {
             for (Metadata md : this.document.getPhysicalDocStruct().getAllMetadata()) {
                 if (md.getType().getName().equals("_representative")) {
                     if (StringUtils.isNotBlank(currentRepresentativePage)) {
-                        Integer value = new Integer(currentRepresentativePage);
+                        Integer value = Integer.valueOf(currentRepresentativePage);
                         md.setValue(String.valueOf(value));
                     } else {
                         md.setValue("");
@@ -565,7 +583,7 @@ public class Metadaten {
             try {
                 Metadata md = new Metadata(mdt);
                 if (StringUtils.isNotBlank(currentRepresentativePage)) {
-                    Integer value = new Integer(currentRepresentativePage);
+                    Integer value = Integer.valueOf(currentRepresentativePage);
                     md.setValue(String.valueOf(value));
                 } else {
                     md.setValue("");
@@ -644,27 +662,7 @@ public class Metadaten {
     }
 
     public String Kopieren() {
-        Metadata md;
-        try {
-            md = new Metadata(this.curMetadatum.getMd().getType());
-
-            md.setValue(this.curMetadatum.getMd().getValue());
-
-            if (curMetadatum.getMd().getAuthorityID() != null && curMetadatum.getMd().getAuthorityURI() != null
-                    && curMetadatum.getMd().getAuthorityValue() != null) {
-                md.setAutorityFile(curMetadatum.getMd().getAuthorityID(), curMetadatum.getMd().getAuthorityURI(),
-                        curMetadatum.getMd().getAuthorityValue());
-            }
-
-            this.myDocStruct.addMetadata(md);
-        } catch (MetadataTypeNotAllowedException e) {
-            logger.error("Fehler beim Kopieren von Metadaten (MetadataTypeNotAllowedException): " + e.getMessage());
-        }
-        MetadatenalsBeanSpeichern(this.myDocStruct);
-        if (!SperrungAktualisieren()) {
-            return "metseditor_timeout";
-        }
-        return "";
+        return Copy();
     }
 
     public String Copy() {
@@ -691,36 +689,37 @@ public class Metadaten {
         return "";
     }
 
-    public String KopierenPerson() {
-        Person per;
+    public String copyCorporate() {
         try {
-            per = new Person(this.myPrefs.getMetadataTypeByName(this.curPerson.getP().getRole()));
-            per.setFirstname(this.curPerson.getP().getFirstname());
-            per.setLastname(this.curPerson.getP().getLastname());
-            per.setRole(this.curPerson.getP().getRole());
-
-            if (curPerson.getAdditionalNameParts() != null && !curPerson.getAdditionalNameParts().isEmpty()) {
-                for (NamePart np : curPerson.getAdditionalNameParts()) {
-                    NamePart newNamePart = new NamePart(np.getType(), np.getValue());
-                    per.addNamePart(newNamePart);
+            Corporate corporate = new Corporate(currentCorporate.getType());
+            corporate.setMainName(currentCorporate.getMainName());
+            if (currentCorporate.getSubNames() != null) {
+                for (NamePart subName : currentCorporate.getSubNames()) {
+                    corporate.addSubName(subName);
                 }
             }
-            if (curPerson.getP().getAuthorityID() != null && curPerson.getP().getAuthorityURI() != null
-                    && curPerson.getP().getAuthorityValue() != null) {
-                per.setAutorityFile(curPerson.getP().getAuthorityID(), curPerson.getP().getAuthorityURI(), curPerson.getP().getAuthorityValue());
+            corporate.setPartName(currentCorporate.getPartName());
+            if (currentCorporate.getAuthorityID() != null && currentCorporate.getAuthorityURI() != null
+                    && currentCorporate.getAuthorityValue() != null) {
+                corporate.setAutorityFile(currentCorporate.getAuthorityID(), currentCorporate.getAuthorityURI(),
+                        currentCorporate.getAuthorityValue());
             }
 
-            this.myDocStruct.addPerson(per);
-        } catch (IncompletePersonObjectException e) {
-            logger.error("Fehler beim Kopieren von Personen (IncompletePersonObjectException): " + e.getMessage());
+            this.myDocStruct.addCorporate(corporate);
+            ;
         } catch (MetadataTypeNotAllowedException e) {
-            logger.error("Fehler beim Kopieren von Personen (MetadataTypeNotAllowedException): " + e.getMessage());
+            logger.error(e);
         }
         MetadatenalsBeanSpeichern(this.myDocStruct);
+        currentCorporate = null;
         if (!SperrungAktualisieren()) {
             return "metseditor_timeout";
         }
         return "";
+    }
+
+    public String KopierenPerson() {
+        return CopyPerson();
     }
 
     public String CopyPerson() {
@@ -806,6 +805,36 @@ public class Metadaten {
             return "metseditor_timeout";
         }
         MetadatenalsTree3Einlesen1(this.tree3, this.currentTopstruct, false);
+        return "";
+    }
+
+    public String addNewCorporate() {
+        try {
+            Corporate corporate = new Corporate(myPrefs.getMetadataTypeByName(tempPersonRolle)); // TODO
+            corporate.setMainName(tempCorporateMainName);
+
+            if (StringUtils.isNotBlank(tempCorporateSubName)) {
+                corporate.addSubName(new NamePart("subname",tempCorporateSubName));
+            }
+            corporate.setPartName(tempCorporatePartName);
+            tempCorporateMainName = null;
+            tempCorporateSubName = null;
+            tempCorporatePartName = null;
+
+            this.myDocStruct.addCorporate(corporate);
+        } catch (IncompletePersonObjectException e) {
+            Helper.setFehlerMeldung("Incomplete data for person", "");
+
+            return "";
+        } catch (MetadataTypeNotAllowedException e) {
+            Helper.setFehlerMeldung("Person is for this structure not allowed", "");
+            return "";
+        }
+        this.modeAddCorporate = false;
+        MetadatenalsBeanSpeichern(this.myDocStruct);
+        if (!SperrungAktualisieren()) {
+            return "metseditor_timeout";
+        }
         return "";
     }
 
@@ -905,12 +934,7 @@ public class Metadaten {
     }
 
     public String Loeschen() {
-        this.myDocStruct.removeMetadata(this.curMetadatum.getMd(), true);
-        MetadatenalsBeanSpeichern(this.myDocStruct);
-        if (!SperrungAktualisieren()) {
-            return "metseditor_timeout";
-        }
-        return "";
+        return delete();
     }
 
     public String delete() {
@@ -932,8 +956,13 @@ public class Metadaten {
     }
 
     public String LoeschenPerson() {
-        this.myDocStruct.removePerson(this.curPerson.getP());
-        MetadatenalsBeanSpeichern(this.myDocStruct);
+        return deletePerson();
+
+    }
+
+    public String deleteCorporate() {
+        myDocStruct.removeCorporate(currentCorporate);
+        MetadatenalsBeanSpeichern(myDocStruct);
         if (!SperrungAktualisieren()) {
             return "metseditor_timeout";
         }
@@ -945,6 +974,10 @@ public class Metadaten {
      */
     public ArrayList<SelectItem> getAddableRollen() {
         return this.metahelper.getAddablePersonRoles(this.myDocStruct, "");
+    }
+
+    public List<SelectItem> getAddableCorporateRoles() {
+        return this.metahelper.getAddableCorporateRoles(myDocStruct, "");
     }
 
     public int getSizeOfRoles() {
@@ -962,6 +995,14 @@ public class Metadaten {
     public int getSizeOfMetadata() {
         try {
             return getAddableMetadataTypes().size();
+        } catch (NullPointerException e) {
+            return 0;
+        }
+    }
+
+    public int getSizeOfCorporates() {
+        try {
+            return getAddableCorporateTypes().size();
         } catch (NullPointerException e) {
             return 0;
         }
@@ -1008,7 +1049,61 @@ public class Metadaten {
          * --------------------- alle Metadatentypen, die keine Person sind, oder mit einem Unterstrich anfangen rausnehmen -------------------
          */
         for (MetadataType mdt : new ArrayList<>(types)) {
-            if (mdt.getIsPerson()) {
+            if (mdt.getIsPerson() || mdt.isCorporate()) {
+                types.remove(mdt);
+            }
+        }
+
+        /*
+         * -------------------------------- die Metadatentypen sortieren --------------------------------
+         */
+        HelperComparator c = new HelperComparator();
+        c.setSortierart("MetadatenTypen");
+        Collections.sort(types, c);
+
+        int counter = types.size();
+
+        for (MetadataType mdt : types) {
+            myList.add(new SelectItem(mdt.getName(), this.metahelper.getMetadatatypeLanguage(mdt)));
+            try {
+                Metadata md = new Metadata(mdt);
+                MetadatumImpl mdum = new MetadatumImpl(md, counter, this.myPrefs, this.myProzess, this);
+                counter++;
+                this.tempMetadatumList.add(mdum);
+
+            } catch (MetadataTypeNotAllowedException e) {
+                logger.error("Fehler beim sortieren der Metadaten: " + e.getMessage());
+            }
+        }
+        if (StringUtils.isBlank(tempTyp) && !tempMetadatumList.isEmpty()) {
+            tempTyp = tempMetadatumList.get(0).getMd().getType().getName();
+            selectedMetadatum = tempMetadatumList.get(0);
+        }
+        return myList;
+    }
+
+    public List<SelectItem> getAddableCorporateTypes() {
+        if (addableCorporateTypes.isEmpty()) {
+            addableCorporateTypes = createAddableCorporateTypes();
+        }
+        return addableCorporateTypes;
+    }
+
+    private List<SelectItem> createAddableCorporateTypes() {
+        ArrayList<SelectItem> myList = new ArrayList<>();
+        /*
+         * -------------------------------- zuerst mal alle addierbaren Metadatentypen ermitteln --------------------------------
+         */
+        List<MetadataType> types = this.myDocStruct.getAddableMetadataTypes();
+        if (types == null) {
+            return myList;
+        }
+
+        /*
+         * --------------------- alle Metadatentypen, die keine Person sind, oder mit einem Unterstrich anfangen rausnehmen -------------------
+         */
+        for (MetadataType mdt : new ArrayList<>(types)) {
+            if (!mdt.isCorporate()) {
                 types.remove(mdt);
             }
         }
@@ -1200,7 +1295,7 @@ public class Metadaten {
         ConfigDisplayRules.getInstance().refresh();
 
         try {
-            Integer id = new Integer(Helper.getRequestParameter("ProzesseID"));
+            Integer id = Integer.valueOf(Helper.getRequestParameter("ProzesseID"));
             this.myProzess = ProcessManager.getProcessById(id);
         } catch (NumberFormatException e1) {
             Helper.setFehlerMeldung("error while loading process data" + e1.getMessage());
@@ -1318,7 +1413,6 @@ public class Metadaten {
         // initialize image list
         numberOfImagesPerPage = ConfigurationHelper.getInstance().getMetsEditorNumberOfImagesPerPage();
         thumbnailSizeInPixel = ConfigurationHelper.getInstance().getMetsEditorThumbnailSize();
-        imageSizes = ConfigurationHelper.getInstance().getMetsEditorImageSizes();
 
         pageNo = 0;
         imageIndex = 0;
@@ -1330,7 +1424,7 @@ public class Metadaten {
             for (Metadata md : lstMetadata) {
                 if (md.getType().getName().equals("_representative")) {
                     try {
-                        Integer value = new Integer(md.getValue());
+                        Integer value = Integer.valueOf(md.getValue());
                         currentRepresentativePage = String.valueOf(value);
                         updateRepresentativePage();
                     } catch (Exception e) {
@@ -1539,13 +1633,14 @@ public class Metadaten {
         this.myDocStruct = inStrukturelement;
         addableMetadataTypes.clear();
         LinkedList<MetadatumImpl> lsMeta = new LinkedList<>();
+        LinkedList<MetaCorporate> lsCorp = new LinkedList<>();
         LinkedList<MetaPerson> lsPers = new LinkedList<>();
         List<MetadataGroupImpl> metaGroups = new LinkedList<>();
         /*
          * -------------------------------- alle Metadaten und die DefaultDisplay-Werte anzeigen --------------------------------
          */
         List<? extends Metadata> myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(inStrukturelement, Helper.getMetadataLanguage(),
-                false, this.myProzess, displayHiddenMetadata);
+                MetadataTypes.METATDATA, this.myProzess, displayHiddenMetadata);
         if (myTempMetadata != null) {
             for (Metadata metadata : myTempMetadata) {
                 MetadatumImpl meta = new MetadatumImpl(metadata, 0, this.myPrefs, this.myProzess, this);
@@ -1557,11 +1652,20 @@ public class Metadaten {
         /*
          * -------------------------------- alle Personen und die DefaultDisplay-Werte ermitteln --------------------------------
          */
-        myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(inStrukturelement, Helper.getMetadataLanguage(), true, this.myProzess,
-                displayHiddenMetadata);
+        myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(inStrukturelement, Helper.getMetadataLanguage(), MetadataTypes.PERSON,
+                this.myProzess, displayHiddenMetadata);
         if (myTempMetadata != null) {
             for (Metadata metadata : myTempMetadata) {
                 lsPers.add(new MetaPerson((Person) metadata, 0, this.myPrefs, inStrukturelement, myProzess, this));
+            }
+        }
+
+        //                corporates
+        myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(inStrukturelement, Helper.getMetadataLanguage(), MetadataTypes.CORPORATE,
+                this.myProzess, displayHiddenMetadata);
+        if (myTempMetadata != null) {
+            for (Metadata metadata : myTempMetadata) {
+                lsCorp.add(new MetaCorporate((Corporate) metadata, myPrefs, inStrukturelement, myProzess, this));
             }
         }
 
@@ -1573,6 +1677,7 @@ public class Metadaten {
             }
         }
 
+        corporates = lsCorp;
         this.myMetadaten = lsMeta;
         this.myPersonen = lsPers;
         this.groups = metaGroups;
@@ -1982,6 +2087,16 @@ public class Metadaten {
                     md.setAuthorityValue(p.getAuthorityValue());
                     ds.addPerson(p);
                 } catch (MetadataTypeNotAllowedException | IncompletePersonObjectException e) {
+                    logger.error(e);
+                }
+            }
+        }
+        if (!addableCorporates.isEmpty()) {
+            for (MetaCorporate corp : addableCorporates) {
+                Corporate corporate = corp.getCorporate();
+                try {
+                    ds.addCorporate(corporate);
+                } catch (MetadataTypeNotAllowedException e) {
                     logger.error(e);
                 }
             }
@@ -3216,7 +3331,7 @@ public class Metadaten {
     /**
      * die erste und die letzte Seite festlegen und alle dazwischen zuweisen ================================================================
      */
-    // TODO area
+
     public String BildErsteSeiteAnzeigen() {
         this.bildAnzeigen = true;
         if (this.treeProperties.get("showpagesasajax")) {
@@ -3438,6 +3553,13 @@ public class Metadaten {
             this.selectedMetadatum = this.tempMetadatumList.get(0);
         }
         return this.selectedMetadatum;
+    }
+
+    public MetaCorporate getSelectedCorporate() {
+        if (selectedCorporate == null && !addableCorporates.isEmpty()) {
+            selectedCorporate = addableCorporates.get(0);
+        }
+        return selectedCorporate;
     }
 
     public void setMetadatum(MetadatumImpl meta) {
@@ -4218,7 +4340,6 @@ public class Metadaten {
         }
     }
 
-    @SuppressWarnings("rawtypes")
     private void activateAllTreeElements(TreeNodeStruct3 inTreeStruct) {
         inTreeStruct.setEinfuegenErlaubt(true);
         for (Object element : inTreeStruct.getChildren()) {
@@ -4335,7 +4456,7 @@ public class Metadaten {
 
     private void createAddableData() {
         String docstructName = "";
-        int selection = new Integer(neuesElementWohin).intValue();
+        int selection = Integer.valueOf(neuesElementWohin).intValue();
         if (selection < 3) {
             docstructName = getAddDocStructType1();
         } else {
@@ -4351,8 +4472,8 @@ public class Metadaten {
                 try {
                     DocStruct ds = this.document.createDocStruct(dst);
 
-                    List<? extends Metadata> myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(ds, Helper.getMetadataLanguage(), false,
-                            this.myProzess, displayHiddenMetadata);
+                    List<? extends Metadata> myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(ds, Helper.getMetadataLanguage(),
+                            MetadataTypes.METATDATA, this.myProzess, displayHiddenMetadata);
                     if (myTempMetadata != null) {
                         for (Metadata metadata : myTempMetadata) {
                             MetadatumImpl meta = new MetadatumImpl(metadata, 0, this.myPrefs, this.myProzess, this);
@@ -4371,13 +4492,33 @@ public class Metadaten {
                 try {
                     DocStruct ds = this.document.createDocStruct(dst);
 
-                    List<? extends Metadata> myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(ds, Helper.getMetadataLanguage(), true,
-                            this.myProzess, displayHiddenMetadata);
+                    List<? extends Metadata> myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(ds, Helper.getMetadataLanguage(),
+                            MetadataTypes.PERSON, this.myProzess, displayHiddenMetadata);
                     if (myTempMetadata != null) {
                         for (Metadata metadata : myTempMetadata) {
                             MetaPerson meta = new MetaPerson((Person) metadata, 0, this.myPrefs, ds, myProzess, this);
 
                             addablePersondata.add(meta);
+                        }
+                    }
+                } catch (TypeNotAllowedForParentException e) {
+                    logger.error(e);
+                }
+            }
+
+            addableCorporates = new LinkedList<>();
+            if (docstructName != null) {
+
+                DocStructType dst = this.myPrefs.getDocStrctTypeByName(docstructName);
+                try {
+                    DocStruct ds = this.document.createDocStruct(dst);
+
+                    List<? extends Metadata> myTempMetadata = this.metahelper.getMetadataInclDefaultDisplay(ds, Helper.getMetadataLanguage(),
+                            MetadataTypes.CORPORATE, this.myProzess, displayHiddenMetadata);
+                    if (myTempMetadata != null) {
+                        for (Metadata metadata : myTempMetadata) {
+                            addableCorporates.add(new MetaCorporate((Corporate) metadata, myPrefs, ds, myProzess, this));
+
                         }
                     }
                 } catch (TypeNotAllowedForParentException e) {
@@ -4417,43 +4558,6 @@ public class Metadaten {
         }
 
         return subList;
-    }
-
-    private String getContextPath() {
-        FacesContext context = FacesContextHelper.getCurrentFacesContext();
-        HttpSession session = (HttpSession) context.getExternalContext().getSession(false);
-        String baseUrl = session.getServletContext().getContextPath();
-        return baseUrl;
-    }
-
-    private Dimension getActualImageSize(Image image) {
-        Dimension dim;
-        try {
-            ConfigurationHelper conf = ConfigurationHelper.getInstance();
-            String imPath = imageFolderName + image.getImageName();
-            String imageURIStr = conf.useS3() ? "s3://" + conf.getS3Bucket() + "/" + S3FileUtils.string2Key(imPath) : "file://" + imPath;
-            String dimString = new GetImageDimensionAction().getDimensions(imageURIStr);
-            int width = Integer.parseInt(dimString.replaceAll("::.*", ""));
-            int height = Integer.parseInt(dimString.replaceAll(".*::", ""));
-            dim = new Dimension(width, height);
-        } catch (NullPointerException | NumberFormatException | ContentLibImageException | URISyntaxException | IOException e) {
-            logger.error("Could not retrieve actual image size", e);
-            dim = new Dimension(0, 0);
-        }
-        return dim;
-    }
-
-    private String createImageUrl(Image currentImage, Integer size, String format, String baseUrl) {
-        ConfigurationHelper conf = ConfigurationHelper.getInstance();
-        StringBuilder url = new StringBuilder(baseUrl);
-        url.append("/cs").append("?action=").append("image").append("&format=").append(format).append("&sourcepath=");
-        if (conf.useS3()) {
-            url.append("s3://").append(conf.getS3Bucket()).append("/").append(S3FileUtils.string2Key(imageFolderName + currentImage.getImageName()));
-        } else {
-            url.append("file://").append(imageFolderName + currentImage.getImageName());
-        }
-        url.append("&width=").append(size).append("&height=").append(size);
-        return url.toString().replaceAll("\\\\", "/");
     }
 
     public void setImageIndex(int imageIndex) {
@@ -4587,7 +4691,7 @@ public class Metadaten {
     }
 
     public int getLastPageNumber() {
-        int ret = new Double(Math.floor(this.allImages.size() / numberOfImagesPerPage)).intValue();
+        int ret = Double.valueOf(Math.floor(this.allImages.size() / numberOfImagesPerPage)).intValue();
         if (this.allImages.size() % numberOfImagesPerPage == 0) {
             ret--;
         }
