@@ -28,6 +28,7 @@ package de.sub.goobi.metadaten;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -54,6 +55,7 @@ import org.reflections.util.ConfigurationBuilder;
 import de.sub.goobi.config.ConfigurationHelper;
 import de.sub.goobi.helper.Helper;
 import de.sub.goobi.helper.HelperComparator;
+import ugh.dl.Corporate;
 import ugh.dl.DigitalDocument;
 import ugh.dl.DocStruct;
 import ugh.dl.DocStructType;
@@ -423,13 +425,14 @@ public class MetadatenHelper implements Comparator<Object> {
      * vom übergebenen DocStruct alle Metadaten ermitteln und um die fehlenden DefaultDisplay-Metadaten ergänzen
      * ================================================================
      */
-    public List<? extends Metadata> getMetadataInclDefaultDisplay(DocStruct inStruct, String inLanguage, boolean inIsPerson, Process inProzess,
-            boolean displayInternalMetadata) {
+    public List<? extends Metadata> getMetadataInclDefaultDisplay(DocStruct inStruct, String inLanguage, Metadaten.MetadataTypes metadataType,
+            Process inProzess, boolean displayInternalMetadata) {
         List<MetadataType> allowedMetadataTypes = inStruct.getType().getAllMetadataTypes();
 
         List<MetadataType> displayMetadataTypes = inStruct.getType().getAllDefaultDisplayMetadataTypes();
 
         List<Metadata> allMetadata = new LinkedList<>();
+        List<Corporate> allCorporates = new LinkedList<>();
         List<Person> allPersons = new LinkedList<>();
         /* sofern Default-Metadaten vorhanden sind, diese ggf. ergänzen */
         if (allowedMetadataTypes != null) {
@@ -444,6 +447,11 @@ public class MetadatenHelper implements Comparator<Object> {
                                 Person p = (Person) existingData.get(i);
                                 allPersons.add(p);
                             }
+                        } else if (mdt.isCorporate()) {
+                            for (int i = 0; i < existingData.size(); i++) {
+                                Corporate corporate = (Corporate) existingData.get(i);
+                                allCorporates.add(corporate);
+                            }
                         } else {
                             allMetadata.addAll(existingData);
                         }
@@ -454,6 +462,10 @@ public class MetadatenHelper implements Comparator<Object> {
                                 Person p = new Person(mdt);
                                 p.setRole(mdt.getName());
                                 allPersons.add(p);
+                            } else if (mdt.isCorporate()) {
+                                Corporate corporate = new Corporate(mdt);
+                                corporate.setRole(mdt.getName());
+                                allCorporates.add(corporate);
                             } else {
                                 Metadata md = new Metadata(mdt);
                                 allMetadata.add(md); // add this new metadata
@@ -467,39 +479,26 @@ public class MetadatenHelper implements Comparator<Object> {
                 }
             }
             inStruct.setAllMetadata(allMetadata);
+            inStruct.setAllCorporates(allCorporates);
             inStruct.setAllPersons(allPersons);
-            //            for (MetadataType mdt : displayMetadataTypes) {
-            //                // check, if mdt is already in the allMDs Metadata list, if not
-            //                // - add it
-            //                if (inStruct.getAllMetadataByType(mdt) == null || inStruct.getAllMetadataByType(mdt).isEmpty()) {
-            //                    try {
-            //                        if (mdt.getIsPerson()) {
-            //                            Person p = new Person(mdt);
-            //                            p.setRole(mdt.getName());
-            //                            inStruct.addPerson(p);
-            //                        } else {
-            //                            Metadata md = new Metadata(mdt);
-            //                            inStruct.addMetadata(md); // add this new metadata
-            //                            // element
-            //                        }
-            //                    } catch (DocStructHasNoTypeException e) {
-            //                        continue;
-            //                    } catch (MetadataTypeNotAllowedException e) {
-            //                        continue;
-            //                    }
-            //                }
-            //            }
+
         }
 
         /*
          * wenn keine Sortierung nach Regelsatz erfolgen soll, hier alphabetisch sortieren
          */
-        if (inIsPerson) {
+        if (metadataType == Metadaten.MetadataTypes.PERSON) {
             List<Person> persons = inStruct.getAllPersons();
             if (persons != null && !inProzess.getRegelsatz().isOrderMetadataByRuleset()) {
                 Collections.sort(persons, new MetadataComparator(inLanguage));
             }
             return persons;
+        } else if (metadataType == Metadaten.MetadataTypes.CORPORATE) {
+            List<Corporate> corpList = inStruct.getAllCorporates();
+            if (corpList != null && !inProzess.getRegelsatz().isOrderMetadataByRuleset()) {
+                Collections.sort(corpList, new MetadataComparator(inLanguage));
+            }
+            return corpList;
         } else {
             List<Metadata> metadata = inStruct.getAllMetadata();
             if (metadata != null && !inProzess.getRegelsatz().isOrderMetadataByRuleset()) {
@@ -730,6 +729,48 @@ public class MetadatenHelper implements Comparator<Object> {
         return myList;
     }
 
+
+    public List<SelectItem> getAddableCorporateRoles(DocStruct myDocStruct, String inRoleName) {
+        List<SelectItem> myList = new ArrayList<>();
+
+        List<MetadataType> types = myDocStruct.getPossibleMetadataTypes();
+        if (types == null) {
+            types = new ArrayList<>();
+        }
+        if (inRoleName != null && inRoleName.length() > 0) {
+            boolean addRole = true;
+            for (MetadataType mdt : types) {
+                if (mdt.getName().equals(inRoleName)) {
+                    addRole = false;
+                }
+            }
+
+            if (addRole) {
+                types.add(this.myPrefs.getMetadataTypeByName(inRoleName));
+            }
+        }
+        /*
+         * --------------------- alle Metadatentypen, die keine Person sind, oder mit einem Unterstrich anfangen rausnehmen -------------------
+         */
+        for (MetadataType mdt : new ArrayList<>(types)) {
+            if (!mdt.isCorporate()) {
+                types.remove(mdt);
+            }
+        }
+
+        /*
+         * -------------------------------- die Metadatentypen sortieren --------------------------------
+         */
+        HelperComparator c = new HelperComparator();
+        c.setSortierart("MetadatenTypen");
+        Collections.sort(types, c);
+
+        for (MetadataType mdt : types) {
+            myList.add(new SelectItem(mdt.getName(), getMetadatatypeLanguage(mdt)));
+        }
+        return myList;
+    }
+
     @Override
     public int compare(Object o1, Object o2) {
         String imageSorting = ConfigurationHelper.getInstance().getImageSorting();
@@ -763,13 +804,14 @@ public class MetadatenHelper implements Comparator<Object> {
         Set<Class<? extends Fileformat>> formatSet = reflections.getSubTypesOf(Fileformat.class);
         for (Class<? extends Fileformat> cl : formatSet) {
             try {
-                Fileformat ff = cl.newInstance();
+                Fileformat ff = cl.getDeclaredConstructor().newInstance();
                 if (ff.isWritable() && ff.getDisplayName().equals(name)) {
                     ff.setPrefs(ruleset.getPreferences());
                     return ff;
                 }
             } catch (InstantiationException e) {
             } catch (IllegalAccessException e) {
+            } catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             } catch (PreferencesException e) {
                 logger.error(e);
             }
@@ -783,13 +825,14 @@ public class MetadatenHelper implements Comparator<Object> {
         for (Class<? extends ExportFileformat> cl : formatSet) {
 
             try {
-                ExportFileformat ff = cl.newInstance();
+                ExportFileformat ff = cl.getDeclaredConstructor().newInstance();
                 if (ff.isExportable() && ff.getDisplayName().equals(name)) {
                     ff.setPrefs(ruleset.getPreferences());
                     return ff;
                 }
             } catch (InstantiationException e) {
             } catch (IllegalAccessException e) {
+            } catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             } catch (PreferencesException e) {
                 logger.error(e);
             }
@@ -805,7 +848,7 @@ public class MetadatenHelper implements Comparator<Object> {
         try {
             DocStruct ds = gdzfile.getDigitalDocument().getLogicalDocStruct();
             metadataList.put("DocStruct", Collections.singletonList(ds.getType().getName()));
-            if (ds.getType().isAnchor() && ds.getAllChildren()!= null) {
+            if (ds.getType().isAnchor() && ds.getAllChildren() != null) {
                 DocStruct volume = ds.getAllChildren().get(0);
                 if (volume.getAllMetadata() != null) {
                     for (Metadata md : volume.getAllMetadata()) {
